tests/invalid/List_Invalid_3.whiley
method main() -> void:
    [int] a2 = [1, 2, 3]
    int y = a2[x]
